--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@clerk/nextjs": "latest",
     "@hookform/resolvers": "^3.10.0",
     "@mongodb-js/zstd": "latest",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/payouts-sdk": "^1.1.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
