--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@remix-run/react": "latest",
     "@sveltejs/kit": "latest",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^7.0.1",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "child_process": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -63,6 +66,7 @@
     "mongodb-client-encryption": "latest",
     "next": "14.2.25",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "path": "latest",
     "react": "^18",
     "react-day-picker": "9.8.0",
